--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="action_settings">个性化</string>
     <string name="action_login">登陆</string>
     <string name="action_my_schedule">日程</string>
-    <string name="action_message">NEWS</string>
+    <string name="action_message">News</string>
     <string name="pref_share_position">位置共享</string>
     <string name="pref_share_position_summ">打开位置共享可以让您的好友看见您的实时位置</string>
     <string name="pref_server_addr">服务器地址</string>
